test/negative/t26.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : x:('a -> 'b -> 'c) -> y:'a -> 'b -> 'c[@@gospel
                                                {| r = f ~x [z:int] ~y z |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

val f : x:('a -> 'b -> 'c) -> y:'a -> 'b -> 'c
(*@ r = f ~x [z : TY] ~y z
     *)
File "t26.mli", line 12, characters 21-22:
Error: The variable `z' is duplicated in this pattern.
